...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="Mvr-Ta-LAA" id="SnS-XZ-00A"/>
                            <outlet property="delegate" destination="Mvr-Ta-LAA" id="131-Gi-XPp"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Video Device" id="tVG-1M-fUQ">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="BfX-bk-pwR">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="cancelButtonPressed:" destination="Mvr-Ta-LAA" id="MAV-ZE-UVZ"/>
                            </connections>
                        </barButtonItem>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mri-Mr-Zd9">
                                <rect key="frame" x="20" y="106.5" width="374" height="769.5"/>
                                <color key="backgroundColor" red="0.3333333432674408" green="0.3333333432674408" blue="0.3333333432674408" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="22"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="100" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Add Device">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="videoButtonClicked:" destination="Zf7-OW-tLJ" eventType="touchUpInside" id="viv-ON-D4P"/>
                                </connections>
                            </button>
...
